--- a/Villaagency/templates/index.html
+++ b/Villaagency/templates/index.html
@@ -115,7 +115,7 @@ https://templatemo.com/tm-591-villa-agency
         <div class="col-lg-4">
           <div class="left-image">
             <img src="{% static 'img/featured.jpg' %}" alt="">
-            <a href="property-details.html"><img src="{% static 'img/featured-icon.png' %}" alt="" style="max-width: 60px; padding: 0px;"></a>
+            <a href="property_details.html"><img src="{% static 'img/featured-icon.png' %}" alt="" style="max-width: 60px; padding: 0px;"></a>
           </div>
         </div>
         <div class="col-lg-5">
