--- a/Villaagency/templates/login.html
+++ b/Villaagency/templates/login.html
@@ -1,4 +1,3 @@
-
 {%load static%}
 <!DOCTYPE html>
 <html lang="en">
@@ -72,7 +71,7 @@ https://templatemo.com/tm-591-villa-agency
                       <li><a href="properties.html">Properties</a></li>
                       <li><a href="property-details.html">Property Details</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="login.html">Login</a></li>
+                      
                       <li><a href="signup.html">Sign up</a></li>
                       <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
                   </ul>   
@@ -87,47 +86,63 @@ https://templatemo.com/tm-591-villa-agency
   </header>
 
 
-<div class="col-lg-5">
-    <form id="contact-form" action="" method="post">
+  <div class="contact section">
+    <div class="container">
       <div class="row">
-        <div class="col-lg-12">
-            <form method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-          <fieldset>
-            <label for="name">Full Name</label>
-            <input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required>
-          </fieldset>
-        </div>
-        <div class="col-lg-12">
-          <fieldset>
-            <label for="email">Email Address</label>
-            <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail..." required="">
-          </fieldset>
-        </div>
-        <div class="col-lg-12">
-          <fieldset>
-            <label for="subject">Subject</label>
-            <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on" >
-          </fieldset>
-        </div>
-        <div class="col-lg-12">
-          <fieldset>
-            <label for="message">Message</label>
-            <textarea name="message" id="message" placeholder="Your Message"></textarea>
-          </fieldset>
-        </div>
-        <div class="col-lg-12">
-          <fieldset>
-            <button type="submit" id="form-submit" class="orange-button">Send Message</button>
-          </fieldset>
-        </form>
+        <div class="col-lg-4 offset-lg-4">
+          <div class="section-heading text-center">
+            <h6>LOG IN</h6>
+            <h2></h2>
+          </div>
         </div>
       </div>
-    </form>
+    </div>
   </div>
-</div>
-</div>
-</div>
+
+  <div class="contact-content">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7">
+          <div id="map">
+            
+          </div>
+          <div class="row">
+            <div class="col-lg-6">
+              
+            </div>
+            
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-5">
+          <form id="contact-form" action="" method="post">
+            {%csrf_token%}
+            <div class="row">
+              <div class="col-lg-12">
+                <fieldset>
+                  <label for="username">User Name</label>
+                  <input type="name" name="name" id="name" placeholder="Your UserName..." autocomplete="on" required>
+                </fieldset>
+              </div>
+              <div class="col-lg-12">
+                <fieldset>
+                  <label for="password">Password</label>
+                  <input type="password" name="password" id="email"  placeholder="Your Psssword..." required="">
+                </fieldset>
+              </div>
+              
+              <div class="col-lg-12">
+                <fieldset>
+                  <button type="submit" id="form-submit" class="orange-button">Send Message</button>
+                </fieldset>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
 
