--- a/Villaagency/templates/admin_data_add.html
+++ b/Villaagency/templates/admin_data_add.html
@@ -58,42 +58,43 @@
               <div class="col-lg-12">
                 <fieldset>
                   <label for="name">Total Flat Area</label>
-                  <input type="text" name="totalflat" id="subject" placeholder="Total Flat Area..." autocomplete="off" >
+                  <input type="text" name="t1" id="subject" placeholder="Total Flat Area...">
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
                   <label for="username">No of Floors</label>
-                  <input type="number" name="floorno" id="name" placeholder="No of Floors..." autocomplete="off" required>
+                  <input type="number" name="t2" id="name" placeholder="No of Floors...">
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
                   <label for="password">Number of Rooms</label>
-                  <input type="number" name="numberofrooms" id="email"  placeholder="Number of Rooms..."  autocomplete="off">
+                  <input type="number" name="t3" id="email"  placeholder="Number of Rooms...">
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
                   <label for="phoneno">Parking </label>
-                  <input type="text" name="parking" id="subject" onchange="validatePhoneNumber()" placeholder="Parking..." autocomplete="off" >
+                  <input type="text" name="t4" id="subject" placeholder="Parking..." >
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
                   <label for="gmail">Payment Method</label>
-                  <input type="text" name="payment" id="email"     placeholder="Payment Method..."  autocomplete="off">
+                  <input type="text" name="t5" id="email" placeholder="Payment Method...">
                 </fieldset>
               </div>
+              
               <div class="col-lg-12">
                 <fieldset>
                   <label for="gmail">Description </label>
-                  <input type="text" name="description" id="email" placeholder="Description..."  autocomplete="off">
+                  <input type="text" name="t6" id="email" placeholder="Description...">
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <button type="submit" id="form-submit" class="orange-button" onclick="validatePhoneNumber()">upload</button>
+                  <button type="submit" id="form-submit" class="orange-button">Submit</button>
                 </fieldset>
               </div>
             </div>
