--- a/Villaagency/templates/home.html
+++ b/Villaagency/templates/home.html
@@ -20,13 +20,7 @@
     <link rel="stylesheet" href="{% static 'css/owl.css' %}">
     <link rel="stylesheet" href="{% static 'css/animate.css' %}">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-<!--
 
-TemplateMo 591 villa agency
-
-https://templatemo.com/tm-591-villa-agency
-
--->
   </head>
 
 <body>
@@ -67,14 +61,13 @@ https://templatemo.com/tm-591-villa-agency
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                      <li><a href="{% url 'users' %}" class="active">User</a></li>
-                      <li><a href="{% url 'user_details' %}" class="active">User / Delete</a></li>
-                      <li><a href="{% url 'admin_data_add' %}" class="active">Add</a></li>
-                      <li><a href="index.html" class="active">Home</a></li>
-                      <li><a href="properties.html">Properties</a></li>
-                      <li><a href="property-details.html">Property Details</a></li>
-                      <li><a href="contact.html">Contact Us</a></li>
-                    
+                      <li><a href="{% url 'index' %}" class="active">Home</a></li>
+                      <li><a href="{% url 'pro' %}">Properties</a></li>
+                      <li><a href="{% url 'det' %}">Property Details</a></li>
+                      <li><a href="{% url 'contact' %}">Contact Us</a></li>
+                      <li><a href="{% url 'login' %}">Login</a></li>
+                      <li><a href="{% url 'signup' %}">Sign up</a></li>
+                      <li><a href="{% url 'profile' %}">PROFILE</a> </li>
                       <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
                   </ul>   
                     <a class='menu-trigger'>
