--- a/Villaagency/templates/admin.html
+++ b/Villaagency/templates/admin.html
@@ -70,6 +70,7 @@ https://templatemo.com/tm-591-villa-agency
                       <li><a href="{% url 'users' %}" class="active">User</a></li>
                       <li><a href="{% url 'user_details' %}" class="active">User / Delete</a></li>
                       <li><a href="{% url 'admin_data_add' %}" class="active">Add</a></li>
+                      <li><a href="{% url 'image2' %}" class="active">Add Image</a></li>
                       <li><a href="{% url 'views' %}" class="active">View</a></li>
                       <li><a href="index.html" class="active">Home</a></li>
                       <li><a href="properties.html">Properties</a></li>
